--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,30 +9,30 @@
     }
     else
     {
-        <h1>Store random names in a database</h1>
-        <p class="lead">Why? Just because.</p>
+        <h1>Social Club Membership Campaign</h1>
+        <p class="lead">This web interface allows a prospective member to join a social club, switch club memberships, and change membership status as desired. All changes are stored in a database</p>
     }
 </div>
 <div class="row">
     <div class="col-md-4">
         <h2>Insert</h2>
         <p>
-            When this button is clicked then a random name will be inserted into the database.
+            When this button is clicked then a member's information will be inserted into the database.
         </p>
-        <p>@Html.ActionLink("Generate new", "Insert", "Home", new { area = "" }, new { @class = "btn btn-primary" })</p>
+        <p>@Html.ActionLink("New Membership", "Insert", "Home", new { area = "" }, new { @class = "btn btn-primary" })</p>
     </div>
     <div class="col-md-4">
         <h2>Update</h2>
         <p>
-            When this button is clicked then a random existing name in the database will be replaced with another random name.
+            When this button is clicked then a member's old information in the database will be replaced in the database.
         </p>
-        <p>@Html.ActionLink("Update", "Update", "Home", new { area = "" }, new { @class = "btn btn-warning" })</p>
+        <p>@Html.ActionLink("Update Membership", "Update", "Home", new { area = "" }, new { @class = "btn btn-warning" })</p>
     </div>
     <div class="col-md-4">
         <h2>Delete</h2>
         <p>
-            When this button is clicked then a random name from the database will be deleted.
+            When this button is clicked then a member's information will be deleted from the database.
         </p>
-        <p>@Html.ActionLink("Delete", "Delete", "Home", new { area = "" }, new { @class = "btn btn-danger" })</p>
+        <p>@Html.ActionLink("Terminate Membership", "Delete", "Home", new { area = "" }, new { @class = "btn btn-danger" })</p>
     </div>
 </div>
